update to technical and candlestick files

--- a/candlestick.ipynb
+++ b/candlestick.ipynb
@@ -676,7 +676,7 @@
     "pattern_df['Hammer_Doji Returns'] = pattern_df['Actual Returns'] * pattern_df['Hammer_Doji Signal'].shift()\n",
     "\n",
     "# Plot Hammer_Doji Returns to examine performance\n",
-    "(1 + pattern_df[[\"Actual Returns\", \"Hammer_Doji Returns\"]]).cumprod().plot()"
+    "(1 + pattern_df[[\"Actual Returns\", \"Hammer_Doji Returns\"]]).cumprod().plot(title = Hammer & Doji vs. Actual Returns)"
    ]
   },
   {
@@ -1398,7 +1398,7 @@
     "pattern_df['MM Returns'] = pattern_df['Actual Returns'] * pattern_df['MM Signal'].shift()\n",
     "\n",
     "# Plot MM Returns to examine performance\n",
-    "(1 + pattern_df[[\"Actual Returns\", \"MM Returns\"]]).cumprod().plot()"
+    "(1 + pattern_df[[\"Actual Returns\", \"MM Returns\"]]).cumprod().plot(title = \"MM vs. Actual Returns\")"
    ]
   },
   {
