renamed file to YEN_

--- a/testing/YEN_machine_learning.ipynb
+++ b/testing/YEN_machine_learning.ipynb
@@ -783,20 +783,20 @@
     "\n",
     "combined_df_['position'] = 0\n",
     "\n",
-    "# short when f&g is over 93 (f&g > 93 = -1)\n",
+    "# short when f&g is over 94 (f&g > 94 = -1)\n",
     "for index, row in combined_df_.iterrows():\n",
-    "    if row['value'] >= 94:\n",
+    "    if row['value'] >= 95:\n",
     "        combined_df_.loc[index, 'position'] = -1.0\n",
     "\n",
-    "# long when f&g is over 44 and under 94 (93 > f&g > 44 = 1)\n",
-    "    elif row['value'] >= 45:\n",
+    "# long when f&g is over 45 and under 94 (93 > f&g > 45 = 1)\n",
+    "    elif row['value'] >= 46:\n",
     "        combined_df_.loc[index, 'position'] = 1.0\n",
     "\n",
-    "# short when f&g is over 22 and less than 45 (45 > f&g > 22 = -1)\n",
-    "    elif row['value'] >= 23:\n",
+    "# short when f&g is over 24 and less than 46 (46 > f&g > 24 = -1)\n",
+    "    elif row['value'] >= 25:\n",
     "        combined_df_.loc[index, 'position'] = -1.0\n",
-    "# hold stables under 23 (f&g < 23 = 0.0)\n",
-    "    elif row['value'] < 23:\n",
+    "# hold stables under 25 (f&g < 23 = 0.0)\n",
+    "    elif row['value'] < 25:\n",
     "        combined_df_.loc[index, 'position'] = 0\n",
     "\n",
     "combined_df_ = combined_df_.dropna()\n",
@@ -2063,7 +2063,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "dreambuilder",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -2077,12 +2077,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.16"
+   "version": "3.10.7 (v3.10.7:6cc6b13308, Sep  5 2022, 14:02:52) [Clang 13.0.0 (clang-1300.0.29.30)]"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "17c113ce94506c0586d4f862013eaefdcc29a14528bb492ab51b02976481f40f"
+    "hash": "aee8b7b246df8f9039afb4144a1f6fd8d2ca17a180786b69acc140d282b71a49"
    }
   }
  },
