update to alpaca and machine learning

--- a/testing/YEN_Alpaca_Markets.ipynb
+++ b/testing/YEN_Alpaca_Markets.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1007,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1008,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1009,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1010,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1011,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
@@ -272,7 +272,7 @@
        "2018-02-16 00:00:00+00:00   67.0  944.210022  0.007721       1"
       ]
      },
-     "execution_count": 1011,
+     "execution_count": 66,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -311,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1012,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -338,7 +338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1013,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -349,7 +349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1014,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -367,7 +367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1015,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
@@ -417,7 +417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1016,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
@@ -556,7 +556,7 @@
        "[454 rows x 3 columns]"
       ]
      },
-     "execution_count": 1016,
+     "execution_count": 71,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -574,7 +574,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1017,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
@@ -583,7 +583,7 @@
        "<AxesSubplot: title={'center': 'Actual vs. XGB Model'}, xlabel='timestamp'>"
       ]
      },
-     "execution_count": 1017,
+     "execution_count": 72,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -613,7 +613,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1018,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
@@ -622,7 +622,7 @@
        "True"
       ]
      },
-     "execution_count": 1018,
+     "execution_count": 73,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -643,7 +643,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1019,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
@@ -668,7 +668,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1020,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -683,7 +683,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1021,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -694,7 +694,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1022,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -745,7 +745,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1023,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -778,17 +778,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1024,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([0, 0, 0, 0, 0, 2, 2, 1, 1, 1, 2, 1, 1, 2, 1, 1, 1, 2, 1, 1],\n",
-       "      dtype=int64)"
+       "array([0, 0, 0, 2, 2, 1, 1, 1, 2, 1, 1, 2, 1, 1, 1, 1, 1, 1], dtype=int64)"
       ]
      },
-     "execution_count": 1024,
+     "execution_count": 79,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -810,7 +809,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1025,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -826,14 +825,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1026,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Symbol: ETHUSD | Side: Buy | Balance: $98414.8\n"
+      "Symbol: ETHUSD | Side: Buy | Balance: $98320.9052245657215795\n"
      ]
     }
    ],
@@ -887,13 +886,85 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1027,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "[AccountActivity({   'activity_type': 'FILL',\n",
+       "     'cum_qty': '1',\n",
+       "     'id': '20230129135238058::137ec3bc-05a3-4891-a876-7896296e55b6',\n",
+       "     'leaves_qty': '0',\n",
+       "     'order_id': '6643bccb-6add-4120-9685-82d2f1e33ca0',\n",
+       "     'order_status': 'filled',\n",
+       "     'price': '1632.38',\n",
+       "     'qty': '1',\n",
+       "     'side': 'buy',\n",
+       "     'symbol': 'ETH/USD',\n",
+       "     'transaction_time': '2023-01-29T18:52:38.058555Z',\n",
+       "     'type': 'fill'}),\n",
+       " AccountActivity({   'activity_type': 'FILL',\n",
+       "     'cum_qty': '1',\n",
+       "     'id': '20230128152900163::682384ce-bbfb-4eb7-a217-04d89cc887f2',\n",
+       "     'leaves_qty': '0',\n",
+       "     'order_id': '76d13868-0524-421a-afe8-0b89997eb58c',\n",
+       "     'order_status': 'filled',\n",
+       "     'price': '1573.8443131',\n",
+       "     'qty': '1',\n",
+       "     'side': 'buy',\n",
+       "     'symbol': 'ETH/USD',\n",
+       "     'transaction_time': '2023-01-28T20:29:00.163851Z',\n",
+       "     'type': 'fill'}),\n",
+       " AccountActivity({   'activity_type': 'FILL',\n",
+       "     'cum_qty': '2.61617707',\n",
+       "     'id': '20230128144933984::4db8a036-5aa5-4c36-a0f7-9282e2348a4b',\n",
+       "     'leaves_qty': '0.37632293',\n",
+       "     'order_id': '2628505e-15ee-42e2-8ca8-a2bd483143e2',\n",
+       "     'order_status': 'partially_filled',\n",
+       "     'price': '1575.98320185',\n",
+       "     'qty': '2.61617707',\n",
+       "     'side': 'sell',\n",
+       "     'symbol': 'ETH/USD',\n",
+       "     'transaction_time': '2023-01-28T19:49:33.984677Z',\n",
+       "     'type': 'partial_fill'}),\n",
+       " AccountActivity({   'activity_type': 'FILL',\n",
+       "     'cum_qty': '2.9925',\n",
+       "     'id': '20230128144933984::06e4e2e2-57af-4d8f-86bb-e496e8d5531c',\n",
+       "     'leaves_qty': '0',\n",
+       "     'order_id': '2628505e-15ee-42e2-8ca8-a2bd483143e2',\n",
+       "     'order_status': 'filled',\n",
+       "     'price': '1574.949',\n",
+       "     'qty': '0.37632293',\n",
+       "     'side': 'sell',\n",
+       "     'symbol': 'ETH/USD',\n",
+       "     'transaction_time': '2023-01-28T19:49:33.98468Z',\n",
+       "     'type': 'fill'}),\n",
+       " AccountActivity({   'activity_type': 'FILL',\n",
+       "     'cum_qty': '1',\n",
+       "     'id': '20230128144830691::5331a4fa-57c2-47f4-ba00-07b09ab011b2',\n",
+       "     'leaves_qty': '0',\n",
+       "     'order_id': '8f3c5c9a-3309-4123-9c38-b65d2347a0da',\n",
+       "     'order_status': 'filled',\n",
+       "     'price': '1577.65',\n",
+       "     'qty': '1',\n",
+       "     'side': 'buy',\n",
+       "     'symbol': 'ETH/USD',\n",
+       "     'transaction_time': '2023-01-28T19:48:30.691578Z',\n",
+       "     'type': 'fill'}),\n",
+       " AccountActivity({   'activity_type': 'FILL',\n",
+       "     'cum_qty': '1',\n",
+       "     'id': '20230127224011925::538e6914-f848-44df-880d-8a3fb5049a33',\n",
+       "     'leaves_qty': '0',\n",
+       "     'order_id': 'e8c14ba9-41fc-494f-a3fd-630da88e616d',\n",
+       "     'order_status': 'filled',\n",
+       "     'price': '1599.161',\n",
+       "     'qty': '1',\n",
+       "     'side': 'buy',\n",
+       "     'symbol': 'ETH/USD',\n",
+       "     'transaction_time': '2023-01-28T03:40:11.925049Z',\n",
+       "     'type': 'fill'}),\n",
+       " AccountActivity({   'activity_type': 'FILL',\n",
        "     'cum_qty': '1',\n",
        "     'id': '20230127030724175::647703e6-6d6d-41d7-935e-f733138ed013',\n",
        "     'leaves_qty': '0',\n",
@@ -907,7 +978,7 @@
        "     'type': 'fill'})]"
       ]
      },
-     "execution_count": 1027,
+     "execution_count": 82,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -919,12 +990,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1028,
+   "execution_count": 83,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Starting Portfolio(As of 1/26/23): $100000\n",
+      "Current Portfolio: $101596.42\n",
+      "Difference of $1596.42\n",
+      "Cash balance: $96679.23\n",
+      "Asset: ETHUSD | Qty: 2.9925 | Worth: $4909.44\n"
+     ]
+    }
+   ],
    "source": [
     "# Obtain account information\n",
-    "account = alpaca.get_account()\n"
+    "account = alpaca.get_portfolio_history()\n",
+    "print (f'Starting Portfolio(As of 1/26/23): ${account.equity[-5]}')\n",
+    "print (f'Current Portfolio: ${account.equity[-1]}')\n",
+    "print (f'Difference of ${round(account.equity[-1] - account.equity[0],2)}')\n",
+    "account = alpaca.get_account()\n",
+    "print (f'Cash balance: ${round(float(account.cash),2)}')\n",
+    "account = alpaca.get_position(ticker)\n",
+    "\n",
+    "print (f'Asset: {account.symbol} | Qty: {account.qty} | Worth: ${round(float(account.qty) * float(account.current_price),2)}')"
    ]
   }
  ],
